--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     outline: none;
-    border: none;
+    /* border: none; */
     text-decoration: none;
 }
 
@@ -162,3 +162,27 @@
   }
   
 }
+
+.bio {
+  display: flex;
+  justify-content: center;
+  margin-top: 175px;
+}
+
+.profil {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  height: 250px;
+}
+
+.profil img {
+  border-radius: 25px;
+  margin-right: 10px;
+}
+
+.paragraf {
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
